fix(index.html): fix < ie9 html tag

--- a/app/templates/app/_index.html
+++ b/app/templates/app/_index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<!--[if lt IE 9]> <html class="no-js lt-ie9" lang="<%= props.locale %>" ng-app="<%= props.githubUser %>.<%= props.title %>"> <![endif]-->
+<!--[if lt IE 9]> <html class="no-js lt-ie9" lang="<%= props.locale %>" ng-app="<%= props.ghUser ? props.ghUser + '.' : '' %><%= props.title %>"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="<%= props.locale %>" ng-app="<%= props.ghUser ? props.ghUser + '.' : '' %><%= props.title %>"> <!--<![endif]-->
 <head>
 
