--- a/app/templates/app/_index.jade
+++ b/app/templates/app/_index.jade
@@ -1,16 +1,16 @@
 doctype html
-html(class="no-js", ng-app="mgcrea.Angularjs20140623")
+html(class="no-js", ng-app="<%= props.user ? props.user + '.' : '' %><%= props.title %>")
   head
   meta(charset="utf-8")
   meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
   title <%= props.title %> - <%= props.description %>
   meta(name="description", content="<%= props.description %>")
 
-<% if(props.supportLegacy) { %><!--[if lt IE 9]>
+<% if(props.supportLegacy) { %>  <!--[if lt IE 9]>
   script(src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/2.2.0/es5-shim.min.js")
   script(src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7/html5shiv.min.js")
-<![endif]--><% } %>
-
+  <![endif]-->
+<% } %>
   //- Sets initial viewport load and disables zooming
   meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no")
   //- Makes your prototype chrome-less once bookmarked to your phone's home screen
