--- a/app/templates/app/_index.html
+++ b/app/templates/app/_index.html
@@ -1,17 +1,25 @@
 <!doctype html>
-<!--[if lt IE 9]> <html class="no-js lt-ie9" lang="<%= props.locale %>" ng-app="<%= props.user ? props.user + '.' : '' %><%= props.title %>"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="<%= props.locale %>" ng-app="<%= props.user ? props.user + '.' : '' %><%= props.title %>"> <!--<![endif]-->
+{%- if props.supportLegacy == 'yes' %}
+<!--[if lt IE 9]> <html class="no-js lt-ie9" lang=" props.locale }}" ng-app="{{ props.user ? props.user + '.' : '' }}{{ props.title }}"> <![endif]-->
+<!--[if gt IE 8]>
+{% endif -%}
+<html class="no-js" lang="{{ props.locale }}" ng-app="{% if props.user %}{{ props.user + '.' }}{% endif %}{{ props.title }}">
+{%- if props.supportLegacy == 'yes' %}
+<![endif]-->
+{% endif -%}
 <head>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title><%= props.title %> - <%= props.description %></title>
-  <meta name="description" content="<%= props.description %>">
+  <title>{{ props.title }} - {{ props.description }}</title>
+  <meta name="description" content="{{ props.description }}">
+{%- if props.supportLegacy == 'yes' %}
 
-<% if(props.supportLegacy) { %><!--[if lt IE 9]>
+<!--[if lt IE 9]>
   <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/2.2.0/es5-shim.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7/html5shiv.min.js"></script>
-<![endif]--><% } %>
+<![endif]-->
+{%- endif %}
 
   <!-- Sets initial viewport load and disables zooming  -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -19,17 +27,20 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <!-- Set a shorter title for iOS6 devices when saved to home screen -->
-  <meta name="apple-mobile-web-app-title" content="<%= props.title %>">
+  <meta name="apple-mobile-web-app-title" content="{{ props.title }}">
 
   <!-- Properties for Google+ snippets -->
-  <meta property="og:title" content="<%= props.title %>">
-  <meta property="og:description" content="<%= props.description %>">
+  <meta property="og:title" content="{{ props.title }}">
+  <meta property="og:description" content="{{ props.description }}">
   <meta property="og:image" content="https://github.global.ssl.fastly.net/images/modules/logos_page/Octocat.png">
 
-  <!-- Author of this application -->
-<% if(props.github) { %>  <link rel="author" href="<%= props.github.html_url %>"> <% } %>
   <link rel="icon" href="http://angularjs.org/favicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="http://angularjs.org/favicon.ico" type="image/x-icon">
+{%- if props.github %}
+  <!-- Author of this application -->
+  <link rel="author" href="{{ props.github.html_url }}"> <% } }}
+{%- endif %}
+
 
   <!-- build:css styles/components.min.css -->
   <!-- bower:css -->
@@ -51,7 +62,11 @@
           <div class="inner" ng-include="'views/partials/header.html'"></div>
         </div>
         <div class="inner cover">
-<% if(props.ngModules.indexOf('route') !== -1) { %>          <div class="inner" ng-view></div><% } else { %>          <div class="inner" ng-include="'views/home.html'"></div><% } %>
+{%- if props.ngModules|contains('route') %}
+          <div class="inner" ng-view></div>
+{%- else %}
+          <div class="inner" ng-include="'views/home.html'"></div>
+{%- endif %}
         </div>
         <div class="mastfoot">
           <div class="inner" ng-include="'views/partials/footer.html'"></div>
@@ -63,7 +78,7 @@
   <!-- build:js scripts/components.min.js -->
   <!-- bower:js -->
   <!-- endbower -->
-  <% if(props.locale !== 'en') { %><script src="bower_components/angular-i18n/angular-locale_<%= props.locale %>.js"></script><% } %>
+  <% if(props.locale !== 'en') { }}<script src="bower_components/angular-i18n/angular-locale_{{ props.locale }}.js"></script><% } }}
   <!-- endbuild -->
 
   <!-- build:js scripts/app.min.js -->
