--- a/app/templates/app/_index.jade
+++ b/app/templates/app/_index.jade
@@ -1,16 +1,18 @@
 doctype html
-html(class="no-js", ng-app="<%= props.user ? props.user + '.' : '' %><%= props.title %>")
+html(class="no-js", lang="{{ props.locale }}", ng-app="{% if props.user %}{{ props.user + '.' }}{% endif %}{{ props.title }}")
   head
   meta(charset="utf-8")
   meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
-  title <%= props.title %> - <%= props.description %>
+  title {{ props.title }} - {{ props.description }}
   meta(name="description", content="<%= props.description %>")
+{%- if props.supportLegacy == 'yes' %}
 
-<% if(props.supportLegacy === 'yes') { %>  <!--[if lt IE 9]>
+  <!--[if lt IE 9]>
   script(src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/2.2.0/es5-shim.min.js")
   script(src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7/html5shiv.min.js")
   <![endif]-->
-<% } %>
+{%- endif %}
+
   //- Sets initial viewport load and disables zooming
   meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no")
   //- Makes your prototype chrome-less once bookmarked to your phone's home screen
@@ -23,7 +25,9 @@ html(class="no-js", ng-app="<%= props.user ? props.user + '.' : '' %><%= props.t
   link(rel="icon", href="http://angularjs.org/favicon.ico", type="image/x-icon")
   link(rel="shortcut icon", href="http://angularjs.org/favicon.ico", type="image/x-icon")
   //- Author of this application
-<% if(props.github) { %>  link(rel="author" href="<%= props.github.html_url %>") <% } %>
+{%- if props.github %}
+  link(rel="author" href="{{ props.github.html_url }}")
+{%- endif %}
 
   // build:css styles/components.min.css
   // bower:css
@@ -40,13 +44,20 @@ html(class="no-js", ng-app="<%= props.user ? props.user + '.' : '' %><%= props.t
         .masthead.clearfix
           .inner(ng-include="'views/partials/header.html'")
         .inner.cover
+{%- if props.ngModules|contains('route') %}
           .inner(ng-view)
+{%- else %}
+          .inner(ng-include="'views/home.html")
+{%- endif %}
         .mastfoot
           .inner(ng-include="'views/partials/footer.html'")
 
     // build:libs scripts/components.min.js
     // bower:js
     // endbower
+{%- if props.locale != 'en' %}
+    script(src="bower_components/angular-i18n/angular-locale_{{ props.locale }}.js")
+{%- endif %}
     // endbuild
 
     // build:js scripts/main.min.js
