fix(build): working jade build

--- a/app/templates/app/_index.jade
+++ b/app/templates/app/_index.jade
@@ -34,7 +34,7 @@ html(class="no-js", lang="{{ props.locale }}", ng-app="{% if props.user %}{{ pro
   // endbower
   // endbuild
 
-  // build:css(.tmp/admin/app) styles/main.min.css
+  // build:css(.tmp) styles/main.min.css
   link(rel="stylesheet", href="styles/main.css")
   // endbuild
 
